--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,5 +67,7 @@
       <button class="btn" routerLink="/tel2">Devis par tel</button>
     </div>
   </div>
+  <app-service></app-service>
+  <app-pret></app-pret>
 
 <app-footer></app-footer>
