--- a/src/app/rdv/rdv.component.html
+++ b/src/app/rdv/rdv.component.html
@@ -5,16 +5,17 @@
 </div>
 
 <div class="m3">
-  <h6> Vous trouvez ci-dessous la liste de vos rendez-vous: </h6>
+  <h6>Vous trouvez ci-dessous la liste de vos rendez-vous :</h6>
 </div>
 
+
 <div class="container mt-5">
-  <div *ngIf="rdvs.length === 0" class="p1">
-    <h1>Pas encore de rendez-vous fixé</h1>
+  <div *ngIf="rdvsWithoutDevisRec.length === 0" class="p1">
+    <h1>Pas encore de demandes de rendez-vous </h1>
     <mat-icon class="ico">report_icon</mat-icon>
   </div>
 
-  <table *ngIf="rdvs.length > 0" class="table table-bordered table-striped">
+  <table *ngIf="rdvsWithoutDevisRec.length > 0" class="table table-bordered table-striped">
     <thead>
       <tr>
         <th>Numéro de devis</th>
@@ -28,16 +29,16 @@
       </tr>
     </thead>
     <tbody>
-      <ng-container *ngFor="let rdv of rdvs">
-        <tr *ngIf="rdv.devisrec">
-          <td>{{ rdv.numdevis }}</td>
-          <td>{{ rdv.type }}</td>
-          <td>{{ rdv.titrepres }}</td>
-          <td>{{ rdv.vehicule.make }}</td>
-          <td>{{ rdv.vehicule.model }}</td>
-          <td>{{ rdv.vehicule.immatriculation }}</td>
-          <td>{{ rdv.devisrec? 'Oui' : 'Non'}}</td>
-          <b><td>{{ rdv.datesouhaite | date: 'dd/MM/yyyy' }} : {{ rdv.heuresouhaite }}h</td></b>
+      <ng-container *ngFor="let rdv of rdvsWithoutDevisRec">
+        <tr>
+          <td>{{ rdv.numdevis || 'non renseigné' }}</td>
+          <td>{{ rdv.type || 'non renseigné' }}</td>
+          <td>{{ rdv.titrepres || 'non renseigné' }}</td>
+          <td>{{ rdv.vehicule?.make || 'non renseigné' }}</td>
+          <td>{{ rdv.vehicule?.model || 'non renseigné' }}</td>
+          <td>{{ rdv.vehicule?.immatriculation || 'non renseigné' }}</td>
+          <td>{{ rdv.devisrec ? 'Oui' : 'Non' }}</td>
+          <td>{{ rdv.rdv || 'non renseigné' }}</td>
         </tr>
       </ng-container>
     </tbody>
@@ -49,68 +50,6 @@
   <button class="bn632-hover bn26" (click)="scheduleAppointment()">PRENDRE UN RDV</button>
 </div>
 
-<div *ngIf="showAddForm2" class="overlay">
-  <div class="popup-form">
-    <h3 class="hh">Demander un devis</h3>
-    <form [formGroup]="adddevisForm" (ngSubmit)="adddevis()">
-      <div class="form-group">
-        <label for="typedemande">Type de demande : *</label>
-        <input id="typedemande" formControlName="typedemande" class="form-control" readonly>
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail : *</label>
-        <input type="email" id="email" formControlName="email" class="form-control" >
-      </div>
-
-      <div class="form-group">
-        <label for="vehicule">Choisissez votre véhicule : *</label>
-        <select id="vehicule" formControlName="vehicule" class="form-control">
-          <option value="" disabled selected>Sélectionnez un véhicule</option>
-          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">{{ vehicule.immatriculation }} - {{ vehicule.make }}</option>
-        </select>
-      </div>
-      
-
-      <div class="form-group">
-        <label for="prestation">Prestation : *</label>
-        <select id="prestation" formControlName="titre"  class="form-control" required>
-          <option value="" disabled selected>Sélectionnez une prestation</option>
-          <option value="FORFAIT RÉVISION">FORFAIT RÉVISION</option>
-          <option value="FORFAIT FREINAGE">FORFAIT FREINAGE</option>
-          <option value="FORFAIT AMORTISSEUR">FORFAIT AMORTISSEUR</option>
-          <option value="FORFAIT EMBRAYAGE">FORFAIT EMBRAYAGE</option>
-          <option value="DÉMARRAGE">DÉMARRAGE</option>
-          <option value="FORFAIT KIT DE DISTRIBUTION">FORFAIT KIT DE DISTRIBUTION</option>
-          <option value="DIRECTION">DIRECTION</option>
-          <option value="FORFAIT ÉCHAPPEMENT">FORFAIT ÉCHAPPEMENT</option>
-          <option value="FORFAIT CLIMATISATION">FORFAIT CLIMATISATION</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="images">Entrez les pièces jointes (images uniquement) :</label>
-        <input type="file" id="images" (change)="onFileChange($event)" multiple accept="image/*" class="form-control">
-      </div>
-      
-      
-      <div class="form-group">
-        <label for="desc">Description : </label>
-        <textarea id="desc" formControlName="desc" class="form-control"></textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="voiturepret">Voiture de prêt 20$ par jour : </label>
-        <input id="voiturepret" formControlName="voiturepret" type="checkbox">
-      </div>
-      
-
-      <div class="d1">
-        <button type="submit" class="btn btn-success">Ajouter</button>
-        <button type="button" class="btn btn-secondary" (click)="requestQuote()">Annuler</button>
-      </div>
-    </form>
-  </div>
-</div>
-
 <div *ngIf="showAddForm1" class="overlay">
   <div class="popup-form">
     <h3 class="hh">Prendre un rendez-vous</h3>
@@ -119,28 +58,81 @@
         <label for="vehicule">Choisissez votre véhicule : *</label>
         <select id="vehicule" formControlName="vehicule" class="form-control">
           <option value="" disabled selected>Sélectionnez un véhicule</option>
-          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">{{ vehicule.immatriculation }} - {{ vehicule.make }}</option>
+          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">
+            {{ vehicule.immatriculation }} - {{ vehicule.make }} - {{ vehicule.model }}
+          </option>
         </select>
       </div>
-      
+
       <div class="form-group">
-        <label for="numdevis">Numéro de devis : *</label>
-        <input id="numdevis" formControlName="numdevis" class="form-control" placeholder="Entrez le numéro de devis">
+        <label for="numdevis">Choisissez votre numéro de devis : *</label>
+        <select id="numdevis" formControlName="numdevis" class="form-control">
+          <option *ngFor="let devis of devisList" [value]="devis.numdevis">
+            {{ devis.numdevis }}
+          </option>
+        </select>
       </div>
-            
+
       <div class="form-group">
         <label for="datesouhaite">Date de rendez-vous souhaité : *</label>
-        <input id="datesouhaite" formControlName="datesouhaite" class="form-control" type="date" placeholder="Sélectionnez la date du rdv souhaité">
+        <input id="datesouhaite" formControlName="datesouhaite" class="form-control" type="date">
+      </div>
+
+      <div class="form-group">
+        <label for="heuresouhaite">Heure de rendez-vous souhaité : *</label>
+        <input id="heuresouhaite" formControlName="heuresouhaite" class="form-control" type="number">
+      </div>
+
+      <div class="form-group">
+        <label for="titrepres">Titre de la prestation :</label>
+        <input id="titrepres" formControlName="titrepres" class="form-control" readonly>
+      </div>
+
+      <div class="form-group">
+        <label for="desc">Description :</label>
+        <textarea id="desc" formControlName="desc" class="form-control"></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="voiturepret">Voiture de prêt :</label>
+        <input id="voiturepret" formControlName="voiturepret" class="form-control" readonly>
       </div>
       
       <div class="form-group">
-        <label for="heuresouhaite">Heure de rendez-vous souhaité : *</label>
-        <input id="heuresouhaite" formControlName="heuresouhaite" class="form-control" type="number" placeholder="Entrez l'heure du rdv souhaité">
+        <label for="email">E-mail :</label>
+        <input id="email" formControlName="email" class="form-control" readonly>
+      </div>
+
+      <div class="d1">
+        <button type="submit" class="btn btn-success">Ajouter</button>
+        <button type="button" class="btn btn-secondary" (click)="scheduleAppointment()">Annuler</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div *ngIf="showAddForm2" class="overlay">
+  <div class="popup-form">
+    <h3 class="hh">Demander un devis</h3>
+    <form [formGroup]="adddevisForm" (ngSubmit)="adddevis()">
+      <div class="form-group">
+        <label for="typedemande">Type de demande : *</label>
+        <input id="typedemande" formControlName="typedemande" class="form-control" readonly>
+      </div>
+      
+      <div class="form-group">
+        <label for="vehicule">Choisissez votre véhicule : *</label>
+        <select id="vehicule" formControlName="vehicule" class="form-control">
+          <option value="" disabled selected>Sélectionnez un véhicule</option>
+          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">
+            {{ vehicule.immatriculation }} - {{ vehicule.make }} - {{ vehicule.model }}
+          </option>
+        </select>
       </div>
 
       <div class="form-group">
         <label for="prestation">Prestation : *</label>
-        <select id="prestation" formControlName="titrepres"  class="form-control" required>
+        <select id="prestation" formControlName="titre" class="form-control" required>
           <option value="" disabled selected>Sélectionnez une prestation</option>
           <option value="FORFAIT RÉVISION">FORFAIT RÉVISION</option>
           <option value="FORFAIT FREINAGE">FORFAIT FREINAGE</option>
@@ -153,25 +145,25 @@
           <option value="FORFAIT CLIMATISATION">FORFAIT CLIMATISATION</option>
         </select>
       </div>
+
+      <div class="form-group">
+        <label for="images">Entrez les pièces jointes (images uniquement) :</label>
+        <input type="file" id="images" (change)="onFileChange($event)" multiple accept="image/*" class="form-control">
+      </div>
       
       <div class="form-group">
-        <label for="desc">Description : </label>
+        <label for="desc">Description :</label>
         <textarea id="desc" formControlName="desc" class="form-control"></textarea>
       </div>
 
       <div class="form-group">
-        <label for="voiturepret">Voiture de prêt : </label>
+        <label for="voiturepret">Voiture de prêt 20$ par jour :</label>
         <input id="voiturepret" formControlName="voiturepret" type="checkbox">
-      </div>
-      
-      <div class="form-group">
-        <label for="email">E-mail : *</label>
-        <input type="email" id="email" formControlName="email" class="form-control" placeholder="Entrez votre e-mail">
       </div>
 
       <div class="d1">
         <button type="submit" class="btn btn-success">Ajouter</button>
-        <button type="button" class="btn btn-secondary" (click)="scheduleAppointment()">Annuler</button>
+        <button type="button" class="btn btn-secondary" (click)="requestQuote()">Annuler</button>
       </div>
     </form>
   </div>
