--- a/src/app/rdvvenir/rdvvenir.component.html
+++ b/src/app/rdvvenir/rdvvenir.component.html
@@ -9,12 +9,12 @@
 </div>
 
 <div class="container mt-5">
-  <div *ngIf="rdvs.length === 0" class="p1">
-    <h1>Pas encore de rendez-vous fixé</h1>
+  <div *ngIf="!hasReceivedQuotes()" class="p1">
+    <h1>Pas encore de rendez-vous programmé</h1>
     <mat-icon class="ico">report_icon</mat-icon>
   </div>
 
-  <table *ngIf="rdvs.length > 0" class="table table-bordered table-striped">
+  <table *ngIf="hasReceivedQuotes()" class="table table-bordered table-striped">
     <thead>
       <tr>
         <th>Numéro de devis</th>
@@ -36,7 +36,7 @@
           <td>{{ rdv.vehicule.make }}</td>
           <td>{{ rdv.vehicule.model }}</td>
           <td>{{ rdv.vehicule.immatriculation }}</td>
-          <td>{{ rdv.devisrec? 'Oui' : 'Non'}}</td>
+          <td>{{ rdv.devisrec ? 'Oui' : 'Non' }}</td>
           <b><td>{{ rdv.datesouhaite | date: 'dd/MM/yyyy' }} : {{ rdv.heuresouhaite }}h</td></b>
         </tr>
       </ng-container>
@@ -47,7 +47,67 @@
 <div class="actions">
   <button class="bn632-hover bn26" (click)="requestQuote()">DEMANDER UN DEVIS</button>
   <button class="bn632-hover bn26" (click)="scheduleAppointment()">PRENDRE UN RDV</button>
-</div>
+  </div>
+  <div *ngIf="showAddForm1" class="overlay">
+    <div class="popup-form">
+      <h3 class="hh">Prendre un rendez-vous</h3>
+      <form [formGroup]="addrdvForm" (ngSubmit)="addrdv()">
+        <div class="form-group">
+          <label for="vehicule">Choisissez votre véhicule : *</label>
+          <select id="vehicule" formControlName="vehicule" class="form-control">
+            <option value="" disabled selected>Sélectionnez un véhicule</option>
+            <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">
+              {{ vehicule.immatriculation }} - {{ vehicule.make }} - {{ vehicule.model }}
+            </option>
+          </select>
+        </div>
+  
+        <div class="form-group">
+          <label for="numdevis">Choisissez votre numéro de devis : *</label>
+          <select id="numdevis" formControlName="numdevis" class="form-control">
+            <option *ngFor="let devis of devisList" [value]="devis.numdevis">{{ devis.numdevis }}</option>
+          </select>
+        </div>
+  
+        <div class="form-group">
+          <label for="datesouhaite">Date de rendez-vous souhaité : *</label>
+          <input id="datesouhaite" formControlName="datesouhaite" class="form-control" type="date">
+        </div>
+  
+        <div class="form-group">
+          <label for="heuresouhaite">Heure de rendez-vous souhaité : *</label>
+          <input id="heuresouhaite" formControlName="heuresouhaite" class="form-control" type="number">
+        </div>
+  
+        <div class="form-group">
+          <label for="titrepres">Titre de la prestation :</label>
+          <input id="titrepres" formControlName="titrepres" class="form-control" readonly>
+        </div>
+  
+        <div class="form-group">
+          <label for="desc">Description : </label>
+          <textarea id="desc" formControlName="desc" class="form-control"></textarea>
+        </div>
+  
+        <div class="form-group">
+          <label for="voiturepret">Voiture de prêt : </label>
+          <input id="voiturepret" formControlName="voiturepret" class="form-control" readonly>
+        </div>
+        <div class="form-group">
+          <label for="email">E-mail : </label>
+          <input id="vemail" formControlName="email" class="form-control" readonly>
+        </div>
+  
+        <div class="d1">
+          <button type="submit" class="btn btn-success">Ajouter</button>
+          <button type="button" class="btn btn-secondary" (click)="scheduleAppointment()">Annuler</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  
+  
+
 
 <div *ngIf="showAddForm2" class="overlay">
   <div class="popup-form">
@@ -57,16 +117,12 @@
         <label for="typedemande">Type de demande : *</label>
         <input id="typedemande" formControlName="typedemande" class="form-control" readonly>
       </div>
-      <div class="form-group">
-        <label for="email">E-mail : *</label>
-        <input type="email" id="email" formControlName="email" class="form-control" >
-      </div>
-
+      
       <div class="form-group">
         <label for="vehicule">Choisissez votre véhicule : *</label>
         <select id="vehicule" formControlName="vehicule" class="form-control">
           <option value="" disabled selected>Sélectionnez un véhicule</option>
-          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">{{ vehicule.immatriculation }} - {{ vehicule.make }}</option>
+          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">{{ vehicule.immatriculation }} - {{ vehicule.make }} - {{ vehicule.model }}</option>
         </select>
       </div>
       
@@ -110,71 +166,4 @@
     </form>
   </div>
 </div>
-
-<div *ngIf="showAddForm1" class="overlay">
-  <div class="popup-form">
-    <h3 class="hh">Prendre un rendez-vous</h3>
-    <form [formGroup]="addrdvForm" (ngSubmit)="addrdv()">
-      <div class="form-group">
-        <label for="vehicule">Choisissez votre véhicule : *</label>
-        <select id="vehicule" formControlName="vehicule" class="form-control">
-          <option value="" disabled selected>Sélectionnez un véhicule</option>
-          <option *ngFor="let vehicule of vehicules" [value]="vehicule._id">{{ vehicule.immatriculation }} - {{ vehicule.make }}</option>
-        </select>
-      </div>
-      
-      <div class="form-group">
-        <label for="numdevis">Numéro de devis : *</label>
-        <input id="numdevis" formControlName="numdevis" class="form-control" placeholder="Entrez le numéro de devis">
-      </div>
-            
-      <div class="form-group">
-        <label for="datesouhaite">Date de rendez-vous souhaité : *</label>
-        <input id="datesouhaite" formControlName="datesouhaite" class="form-control" type="date" placeholder="Sélectionnez la date du rdv souhaité">
-      </div>
-      
-      <div class="form-group">
-        <label for="heuresouhaite">Heure de rendez-vous souhaité : *</label>
-        <input id="heuresouhaite" formControlName="heuresouhaite" class="form-control" type="number" placeholder="Entrez l'heure du rdv souhaité">
-      </div>
-
-      <div class="form-group">
-        <label for="prestation">Prestation : *</label>
-        <select id="prestation" formControlName="titrepres"  class="form-control" required>
-          <option value="" disabled selected>Sélectionnez une prestation</option>
-          <option value="FORFAIT RÉVISION">FORFAIT RÉVISION</option>
-          <option value="FORFAIT FREINAGE">FORFAIT FREINAGE</option>
-          <option value="FORFAIT AMORTISSEUR">FORFAIT AMORTISSEUR</option>
-          <option value="FORFAIT EMBRAYAGE">FORFAIT EMBRAYAGE</option>
-          <option value="DÉMARRAGE">DÉMARRAGE</option>
-          <option value="FORFAIT KIT DE DISTRIBUTION">FORFAIT KIT DE DISTRIBUTION</option>
-          <option value="DIRECTION">DIRECTION</option>
-          <option value="FORFAIT ÉCHAPPEMENT">FORFAIT ÉCHAPPEMENT</option>
-          <option value="FORFAIT CLIMATISATION">FORFAIT CLIMATISATION</option>
-        </select>
-      </div>
-      
-      <div class="form-group">
-        <label for="desc">Description : </label>
-        <textarea id="desc" formControlName="desc" class="form-control"></textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="voiturepret">Voiture de prêt : </label>
-        <input id="voiturepret" formControlName="voiturepret" type="checkbox">
-      </div>
-      
-      <div class="form-group">
-        <label for="email">E-mail : *</label>
-        <input type="email" id="email" formControlName="email" class="form-control" placeholder="Entrez votre e-mail">
-      </div>
-
-      <div class="d1">
-        <button type="submit" class="btn btn-success">Ajouter</button>
-        <button type="button" class="btn btn-secondary" (click)="scheduleAppointment()">Annuler</button>
-      </div>
-    </form>
-  </div>
-</div>
-
 <app-footer></app-footer>
