--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -19,11 +19,12 @@
         <div class="a7">
             <a routerLink="/userinfo">Mes informations personnelles</a>
             <a routerLink="/vehicule">Mes véhicules</a>
-            <a routerLink="/rdv">Mes RDV</a>
-            <a routerLink="/demandes">Mes demandes</a>
+            <a routerLink="/rdv">Mes demandes de RDV</a>
+            <a routerLink="/demandes">Mes demandes de devis</a>
+            <a routerLink="/programme">Mes RDV programmés</a>
             <a routerLink="/rdvvenir">RDV à venir</a>
             <a routerLink="/carnet">Mon carnet d'entretien</a>
-            <a href="#">Voiture de prèt</a>
+            <a routerLink="/voiturepret">Voiture de prèt</a>
             <a (click)="handleLogout()"> <p  class="a8">Déconnexion  <mat-icon class="ico">logout_icon</mat-icon> </p></a>
         </div>
     </div>
