--- a/src/app/userinfos/userinfos.component.css
+++ b/src/app/userinfos/userinfos.component.css
@@ -107,7 +107,7 @@ h2 {
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  transition: background-color 0.3s ease; 
 }
 
 .bn632-hover.bn26:hover {
